--- a/CodSoft_DS_Task1.ipynb
+++ b/CodSoft_DS_Task1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNMf2QoApo4iMjc2FOpsEHx",
+      "authorship_tag": "ABX9TyPEWkAWR+mGe7JmZjeU+NSS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,29 +29,16 @@
     {
       "cell_type": "code",
       "source": [
-        "# This Python 3 environment comes with many helpful analytics libraries installed\n",
-        "# It is defined by the kaggle/python Docker image: https://github.com/kaggle/docker-python\n",
-        "# For example, here's several helpful packages to load\n",
-        "\n",
-        "import numpy as np # linear algebra\n",
+        "import numpy as np\n",
         "np.random.seed(0)\n",
-        "\n",
-        "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
+        "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns\n",
         "%matplotlib inline\n",
-        "# pd.plotting.register_matplotlib_converters()\n",
-        "\n",
-        "# Input data files are available in the read-only \"../input/\" directory\n",
-        "# For example, running this (by clicking run or pressing Shift+Enter) will list all files under the input directory\n",
-        "\n",
         "import os\n",
         "for dirname, _, filenames in os.walk('/kaggle/input'):\n",
         "    for filename in filenames:\n",
-        "        print(os.path.join(dirname, filename))\n",
-        "\n",
-        "# You can write up to 20GB to the current directory (/kaggle/working/) that gets preserved as output when you create a version using \"Save & Run All\"\n",
-        "# You can also write temporary files to /kaggle/temp/, but they won't be saved outside of the current session"
+        "        print(os.path.join(dirname, filename))"
       ],
       "metadata": {
         "id": "ZPScMCxVXguO"
@@ -62,9 +49,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Setting up aesthetics\n",
-        "sns.set_style(style='ticks')\n",
-        "# sns.set(font_scale=1.2)"
+        "sns.set_style(style='ticks')"
       ],
       "metadata": {
         "id": "y8NE_bWxXyeN"
@@ -75,13 +60,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Importing data\n",
-        "titanic_df = pd.read_csv(\"/content/Titanic-Dataset.csv\")\n",
-        "\n",
-        "# Shape and Features\n",
-        "shape = titanic_df.shape\n",
+        "titanic_df = pd.read_csv(\"/content/Titanic-Dataset.csv\")shape = titanic_df.shape\n",
         "features = titanic_df.columns\n",
-        "\n",
         "print(f\"Our data has the following shape {shape}\")\n",
         "print(f\"Features present in our data are:\",features.to_list(),sep=\"\\n\")"
       ],
@@ -1028,12 +1008,8 @@
         "    labels = ['Died','Survived'],\n",
         "    colors=[\"Crimson\", \"Green\"],\n",
         "    autopct=\"%1.1f%%\",\n",
-        "\n",
         ")\n",
-        "\n",
-        "# Add a legend to the pie chart\n",
         "plt.legend([\"Died\", \"Survived\"], loc=\"upper right\")\n",
-        "\n",
         "plt.title('Survival Status')\n",
         "plt.show()"
       ],
@@ -1062,7 +1038,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Plotting Numerical Data\n",
         "fig, axes = plt.subplots(nrows=2, ncols=2, figsize=(10, 8))\n",
         "sns.histplot(data=titanic_df, x='Age', ax = axes[0,0]).set_title('Age')\n",
         "sns.histplot(data=titanic_df, x='SibSp', ax = axes[0,1]).set_title('SibSp')\n",
@@ -1098,8 +1073,6 @@
       "cell_type": "code",
       "source": [
         "fig, axes = plt.subplots(1, 2, figsize=(12, 3), sharey=True)\n",
-        "\n",
-        "# Plot the kernel density estimate for age, colored by survival status\n",
         "ax = sns.kdeplot(\n",
         "    data=titanic_df,\n",
         "    x=\"Age\",\n",
@@ -1109,17 +1082,9 @@
         "    linewidth=0.5,\n",
         "    ax=axes[0],\n",
         ")\n",
-        "\n",
-        "# Set the x-axis limits\n",
         "ax.set_xlim([0, 80])\n",
-        "\n",
-        "# Add a title to the first subplot\n",
         "ax.set_title(\"Age\")\n",
-        "\n",
-        "# Customise the legend labels\n",
         "ax.legend([\"Dead\", \"Alive\"], title=\"Survived\")\n",
-        "\n",
-        "# Plot the second subplot\n",
         "ax = sns.kdeplot(\n",
         "    data=titanic_df,\n",
         "    x=\"Fare\",\n",
@@ -1129,16 +1094,9 @@
         "    linewidth=0.5,\n",
         "    ax=axes[1],\n",
         ")\n",
-        "\n",
-        "# Set the x-axis limits\n",
         "ax.set_xlim([10, 200])\n",
-        "\n",
-        "# Add a title to the second subplot\n",
         "ax.set_title(\"Fare\")\n",
-        "\n",
-        "# Customise the legend labels\n",
         "ax.legend([\"Dead\", \"Alive\"], title=\"Survived\")\n",
-        "\n",
         "plt.subplots_adjust(hspace=0.6)\n",
         "plt.suptitle('Age & Fare')\n",
         "plt.show()"
@@ -1198,17 +1156,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# Comparing survival status over Numerical Features\n",
         "pivot_table_df = pd.pivot_table(data = titanic_df, index = 'Survived',\n",
         "                                values = ['Age','SibSp','Parch','Fare'],\n",
-        "                                aggfunc='mean').round(2) # Rounding of the cells by 2 digits\n",
-        "pivot_table_df\n",
-        "\n",
-        "# Nyah, heatmaps won't work much in this case. :D\n",
-        "# plt.figure(figsize=(8, 2))\n",
-        "# sns.heatmap(pivot_table_df, annot=True, fmt=\".2f\")\n",
-        "# plt.title(\"Mean Values Heatmap - Titanic Dataset\")\n",
-        "# plt.show()"
+        "                                aggfunc='mean').round(2)\n",
+        "pivot_table_df"
       ],
       "metadata": {
         "colab": {
@@ -1560,12 +1511,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Pairplotting of Numerical Data to fetch more insight\n",
-        "\n",
         "plt.figure(figsize=(10, 10))\n",
         "sns.pairplot(data=titanic_df, vars=numerical_features, kind='scatter', hue='Survived',palette=['red','green'])\n",
         "plt.suptitle(\"Pair Plot of Titanic Data - Numerical Features\", y=1.02)\n",
-        "# plt.tight_layout(pad=1.2)\n",
         "plt.show()"
       ],
       "metadata": {
@@ -1602,15 +1550,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# for feature in categorical_features:\n",
-        "#     sns.barplot(x = titanic_df[feature].value_counts().index,\n",
-        "#                 y = titanic_df[feature].value_counts()).set_title(feature)\n",
-        "#     plt.show()\n",
-        "\n",
         "fig, axes = plt.subplots(nrows=2, ncols=2, figsize=(12, 10))\n",
-        "\n",
-        "# Loop through the categorical features and plot bar plots in separate subplots\n",
-        "for i, feature in enumerate(categorical_features[:4]): # Not selecting Ticket\n",
+        "for i, feature in enumerate(categorical_features[:4]):\n",
         "    row = i // 2\n",
         "    col = i % 2\n",
         "    sns.barplot(x=titanic_df[feature].value_counts().index, y=titanic_df[feature].value_counts(), ax=axes[row, col])\n",
@@ -1641,7 +1582,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Comparing survival and each of these categorical variables\n",
         "print(pd.pivot_table(titanic_df, index = 'Survived', columns = 'Pclass', values = 'Ticket' ,aggfunc ='count'))\n",
         "print()\n",
         "print(pd.pivot_table(titanic_df, index = 'Survived', columns = 'Sex', values = 'Ticket' ,aggfunc ='count'))\n",
@@ -1682,8 +1622,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Comparing survival over Categorical Classes\n",
-        "\n",
         "fig , axes = plt.subplots(1, 3, figsize=(12, 3))\n",
         "plt.suptitle(\"Comparing survival status over Categorical Classes\", y=1, fontsize=16)\n",
         "\n",
@@ -1724,7 +1662,7 @@
     {
       "cell_type": "code",
       "source": [
-        "titanic_df.isna().sum().sort_values(ascending=False)\n"
+        "titanic_df.isna().sum().sort_values(ascending=False)"
       ],
       "metadata": {
         "colab": {
@@ -1883,36 +1821,20 @@
         "from sklearn.model_selection import train_test_split, cross_val_score\n",
         "from sklearn.metrics import classification_report, roc_curve, auc\n",
         "from sklearn.preprocessing import FunctionTransformer\n",
-        "\n",
-        "# Setting up transformers\n",
         "numerical_transformer = Pipeline( steps= [\n",
         "    (\"imputer\", SimpleImputer(strategy='median')),\n",
         "    (\"scaler\", RobustScaler())\n",
         "])\n",
-        "\n",
-        "\n",
         "categorical_transformer = OneHotEncoder(drop='first', sparse_output=False, handle_unknown='ignore')\n",
         "\n",
         "def family_size(data):\n",
         "    data['Family_Size'] = data['SibSp'] + data['Parch'] + 1\n",
         "    data['Family_Size'] = data['Family_Size'].apply(lambda x: 1 if x == 1 else (2 if x <= 4 else 3))\n",
         "    return data\n",
-        "\n",
-        "# def family_popularity(data):\n",
-        "#     data['Family_Name'] = data['Name'].str.split(',', expand=True)[0]\n",
-        "#     data['Family_Counts'] = data['Family_Name'].apply(lambda x: pd.Series.to_dict(data['Family_Name'].value_counts()).get(x))\n",
-        "#     data.drop(columns=['Name'], inplace=True)  # Drop the 'Name' column\n",
-        "#     return data\n",
-        "\n",
-        "# Include the family_popularity_transformer in your preprocessor\n",
-        "# family_popularity_transformer = FunctionTransformer(family_popularity, validate=False)\n",
-        "\n",
         "preprocessor = ColumnTransformer(transformers=[\n",
         "    ('numerical_transformer', numerical_transformer, ['Age', 'Fare']),\n",
         "    ('categorical_transformer', categorical_transformer, ['Sex', 'Embarked']),\n",
-        "#     ('family_size_transformer', FunctionTransformer(family_size, validate=False), ['SibSp', 'Parch']),\n",
-        "#     ('family_popularity_transformer', family_popularity_transformer, ['Name'])  # Include the 'Name' column\n",
-        "])\n"
+        "])"
       ],
       "metadata": {
         "id": "wTp8OF_yYV64"
@@ -1926,15 +1848,11 @@
         "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.tree import DecisionTreeClassifier\n",
-        "\n",
-        "lr = LogisticRegression(random_state=42, penalty='l2', C=0.2)  # Add L2 regularization (Ridge)\n",
-        "\n",
+        "lr = LogisticRegression(random_state=42, penalty='l2', C=0.2)\n",
         "base_pipeline = Pipeline(steps = [\n",
         "    ('preprocessor', preprocessor),\n",
         "    ('lr', lr)\n",
-        "])\n",
-        "\n",
-        "# rfc.get_params()\n"
+        "])"
       ],
       "metadata": {
         "id": "UFLWLv3OYZuS"
@@ -1945,12 +1863,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Selecting X & y\n",
         "X = titanic_df.drop(['Name','Ticket','Cabin','PassengerId', 'Survived'], axis=1)#[:377]\n",
-        "# test_X = titanic_df.drop(['Name','Ticket','Cabin','PassengerId', 'Survived'], axis=1)[377:]\n",
-        "\n",
-        "y = titanic_df.Survived#[:377]\n",
-        "# test_y = titanic_df.Survived[377:]\n",
+        "y = titanic_df.Survived\n",
         "len(y)"
       ],
       "metadata": {
@@ -1978,11 +1892,7 @@
       "cell_type": "code",
       "source": [
         "%%time\n",
-        "\n",
-        "# Three set spliting\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state=42)\n",
-        "\n",
-        "# Base\n",
         "base_pipeline.fit(X_train, y_train)\n",
         "base_pipeline.score(X_test, y_test)\n",
         "y_pred = base_pipeline.predict(X_test)"
@@ -2010,7 +1920,6 @@
       "cell_type": "code",
       "source": [
         "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
-        "\n",
         "ConfusionMatrixDisplay(confusion_matrix(y_test, y_pred)).plot()\n",
         "plt.savefig('conf.jpg')"
       ],
@@ -2039,22 +1948,13 @@
     {
       "cell_type": "code",
       "source": [
-        "# After fitting the preprocessor, you can access the transformed feature names like this:\n",
         "transformed_feature_names = []\n",
-        "\n",
-        "# Get transformed feature names from the numerical_transformer\n",
         "numerical_feature_names = preprocessor.named_transformers_['numerical_transformer'].named_steps['scaler'].get_feature_names_out()\n",
         "transformed_feature_names.extend(numerical_feature_names)\n",
-        "\n",
-        "# Get transformed feature names from the categorical_transformer\n",
         "categorical_feature_names = preprocessor.named_transformers_['categorical_transformer'].get_feature_names_out(input_features=['Sex', 'Embarked'])\n",
         "transformed_feature_names.extend(categorical_feature_names)\n",
-        "\n",
-        "# Get transformed feature names from the family_size_transformer\n",
         "family_size_feature_names = ['Family_Size']  # Assuming 'Family_Size' is the output feature name\n",
         "transformed_feature_names.extend(family_size_feature_names)\n",
-        "\n",
-        "# Now, transformed_feature_names contains the feature names of the transformed X_train.\n",
         "print(transformed_feature_names)"
       ],
       "metadata": {
@@ -2106,13 +2006,8 @@
       "cell_type": "code",
       "source": [
         "from sklearn.metrics import RocCurveDisplay\n",
-        "\n",
         "models = [LogisticRegression(random_state=42, penalty='l2', C=0.8),RandomForestClassifier(),GradientBoostingClassifier()]\n",
-        "\n",
-        "\n",
         "fig, ax = plt.subplots()\n",
-        "\n",
-        "# Plot each ROC curve on the same axis\n",
         "for model in models:\n",
         "    pipeline = Pipeline(steps = [\n",
         "    ('preprocessor', preprocessor),\n",
@@ -2126,13 +2021,9 @@
         "                            estimator_name=model)\n",
         "    display.plot(ax=ax)\n",
         "    plt.savefig('ROC.jpg')\n",
-        "\n",
-        "# Set the title and labels\n",
         "ax.set_title(\"ROC Curves for Different Models\")\n",
         "ax.set_xlabel(\"False Positive Rate\")\n",
         "ax.set_ylabel(\"True Positive Rate\")\n",
-        "\n",
-        "# Show the plot\n",
         "plt.show()"
       ],
       "metadata": {
