--- a/CodSoft_DS_Task4.ipynb
+++ b/CodSoft_DS_Task4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN3o9xDWsYHlyNDfPmnE4RC",
+      "authorship_tag": "ABX9TyNM17G04+pCm6QC4l8+k1IH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,17 +34,10 @@
       },
       "outputs": [],
       "source": [
-        "# Supress Warnings\n",
-        "\n",
         "import warnings\n",
         "warnings.filterwarnings('ignore')\n",
-        "\n",
-        "# Import the numpy and pandas package\n",
-        "\n",
         "import numpy as np\n",
         "import pandas as pd\n",
-        "\n",
-        "# Data Visualisation\n",
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns"
       ]
@@ -761,9 +754,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Checking Null values\n",
-        "advertising.isnull().sum()*100/advertising.shape[0]\n",
-        "# There are no NULL values in the dataset, hence it is clean."
+        "advertising.isnull().sum()*100/advertising.shape[0]"
       ],
       "metadata": {
         "colab": {
@@ -837,7 +828,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Outlier Analysis\n",
         "fig, axs = plt.subplots(3, figsize = (5,5))\n",
         "plt1 = sns.boxplot(advertising['TV'], ax = axs[0])\n",
         "plt2 = sns.boxplot(advertising['Newspaper'], ax = axs[1])\n",
@@ -897,7 +887,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Let's see how Sales are related with other variables using scatter plot.\n",
         "sns.pairplot(advertising, x_vars=['TV', 'Newspaper', 'Radio'], y_vars='Sales', height=4, aspect=1, kind='scatter')\n",
         "plt.show()"
       ],
@@ -926,7 +915,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Let's see the correlation between different variables.\n",
         "sns.heatmap(advertising.corr(), cmap=\"YlGnBu\", annot = True)\n",
         "plt.show()"
       ],
@@ -979,8 +967,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Let's now take a look at the train dataset\n",
-        "\n",
         "X_train.head()"
       ],
       "metadata": {
@@ -1150,10 +1136,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Add a constant to get an intercept\n",
         "X_train_sm = sm.add_constant(X_train)\n",
-        "\n",
-        "# Fit the resgression line using 'OLS'\n",
         "lr = sm.OLS(y_train, X_train_sm).fit()"
       ],
       "metadata": {
@@ -1165,7 +1148,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Print the parameters, i.e. the intercept and the slope of the regression line fitted\n",
         "lr.params"
       ],
       "metadata": {
@@ -1230,7 +1212,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Performing a summary operation lists out all the different parameters of the regression line fitted\n",
         "print(lr.summary())"
       ],
       "metadata": {
@@ -1321,8 +1302,8 @@
       "source": [
         "fig = plt.figure()\n",
         "sns.distplot(res, bins = 15)\n",
-        "fig.suptitle('Error Terms', fontsize = 15)                  # Plot heading\n",
-        "plt.xlabel('y_train - y_train_pred', fontsize = 15)         # X-label\n",
+        "fig.suptitle('Error Terms', fontsize = 15)\n",
+        "plt.xlabel('y_train - y_train_pred', fontsize = 15)\n",
         "plt.show()"
       ],
       "metadata": {
@@ -1378,10 +1359,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Add a constant to X_test\n",
         "X_test_sm = sm.add_constant(X_test)\n",
-        "\n",
-        "# Predict the y values corresponding to X_test_sm\n",
         "y_pred = lr.predict(X_test_sm)"
       ],
       "metadata": {
@@ -1484,7 +1462,6 @@
     {
       "cell_type": "code",
       "source": [
-        "#Returns the mean squared error; we'll take a square root\n",
         "np.sqrt(mean_squared_error(y_test, y_pred))"
       ],
       "metadata": {
