--- a/CodSoft_DS_Task5.ipynb
+++ b/CodSoft_DS_Task5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMLIy1seoSUerT1ZzXDM57w",
+      "authorship_tag": "ABX9TyOMDkj8nq9CJ3RBwSjbXcC6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "nMUzCYWh9YR0"
       },
       "outputs": [],
       "source": [
-        "# import the necessary packages\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
@@ -45,21 +44,17 @@
     {
       "cell_type": "code",
       "source": [
-        "# Load the dataset from the csv file using pandas\n",
-        "# best way is to mount the drive on colab and\n",
-        "# copy the path for the csv file\n",
         "data = pd.read_csv(\"/content/creditcard.csv\")"
       ],
       "metadata": {
         "id": "Mh4vr57UAECs"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Grab a peek at the data\n",
         "data.head()"
       ],
       "metadata": {
@@ -70,7 +65,7 @@
         "id": "xlHsfksJAHi1",
         "outputId": "92ca223d-c787-46b8-c996-99fd9ff26436"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -491,8 +486,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Print the shape of the data\n",
-        "# data = data.sample(frac = 0.1, random_state = 48)\n",
         "print(data.shape)\n",
         "print(data.describe())"
       ],
@@ -503,7 +496,7 @@
         "id": "VJGJ1Y81AJCh",
         "outputId": "a99183d3-de7a-4974-92c6-91c21ede762a"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -568,7 +561,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Determine number of fraud cases in dataset\n",
         "fraud = data[data['Class'] == 1]\n",
         "valid = data[data['Class'] == 0]\n",
         "outlierFraction = len(fraud)/float(len(valid))\n",
@@ -583,7 +575,7 @@
         "id": "aEkEQOM1AKly",
         "outputId": "7803c68e-99a3-49e8-dfe9-a0ce52663d78"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -610,7 +602,7 @@
         "id": "LbLNGuJlAL_O",
         "outputId": "c68f9158-0d70-4d10-afd8-9ed8a7da5b38"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -712,7 +704,7 @@
         "id": "ksDZ8bx0ANa1",
         "outputId": "0f60cd65-8d42-44ef-ba43-9dccfc559d37"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -803,7 +795,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# Correlation matrix\n",
         "corrmat = data.corr()\n",
         "fig = plt.figure(figsize = (12, 9))\n",
         "sns.heatmap(corrmat, vmax = .8, square = True)\n",
@@ -817,7 +808,7 @@
         "id": "R7BOdBgaAOxo",
         "outputId": "c6171a57-ae1c-4821-c722-0d6bffd5b745"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -834,13 +825,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# dividing the X and the Y from the dataset\n",
         "X = data.drop(['Class'], axis = 1)\n",
         "Y = data[\"Class\"]\n",
         "print(X.shape)\n",
         "print(Y.shape)\n",
-        "# getting just the values for the sake of processing\n",
-        "# (its a numpy array with no columns)\n",
         "xData = X.values\n",
         "yData = Y.values"
       ],
@@ -851,7 +839,7 @@
         "id": "jxEzeOHZAQBV",
         "outputId": "ec52273b-7ae2-4a7d-9554-c82db602d8bf"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -866,62 +854,47 @@
     {
       "cell_type": "code",
       "source": [
-        "# Using Scikit-learn to split data into training and testing sets\n",
         "from sklearn.model_selection import train_test_split\n",
-        "# Split the data into training and testing sets\n",
-        "xTrain, xTest, yTrain, yTest = train_test_split(\n",
-        "        xData, yData, test_size = 0.2, random_state = 42)"
+        "xTrain, xTest, yTrain, yTest = train_test_split(xData, yData, test_size = 0.2, random_state = 42)"
       ],
       "metadata": {
         "id": "9yUazIllARPS"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Building the Random Forest Classifier (RANDOM FOREST)\n",
         "from sklearn.ensemble import RandomForestClassifier\n",
-        "# random forest model creation\n",
         "rfc = RandomForestClassifier()\n",
         "rfc.fit(xTrain, yTrain)\n",
-        "# predictions\n",
         "yPred = rfc.predict(xTest)"
       ],
       "metadata": {
         "id": "G98UsEZQASj1"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Evaluating the classifier\n",
-        "# printing every score of the classifier\n",
-        "# scoring in anything\n",
         "from sklearn.metrics import classification_report, accuracy_score\n",
         "from sklearn.metrics import precision_score, recall_score\n",
         "from sklearn.metrics import f1_score, matthews_corrcoef\n",
         "from sklearn.metrics import confusion_matrix\n",
-        "\n",
         "n_outliers = len(fraud)\n",
         "n_errors = (yPred != yTest).sum()\n",
         "print(\"The model used is Random Forest classifier\")\n",
-        "\n",
         "acc = accuracy_score(yTest, yPred)\n",
         "print(\"The accuracy is {}\".format(acc))\n",
-        "\n",
         "prec = precision_score(yTest, yPred)\n",
         "print(\"The precision is {}\".format(prec))\n",
-        "\n",
         "rec = recall_score(yTest, yPred)\n",
         "print(\"The recall is {}\".format(rec))\n",
-        "\n",
         "f1 = f1_score(yTest, yPred)\n",
         "print(\"The F1-Score is {}\".format(f1))\n",
-        "\n",
         "MCC = matthews_corrcoef(yTest, yPred)\n",
         "print(\"The Matthews correlation coefficient is{}\".format(MCC))"
       ],
@@ -932,7 +905,7 @@
         "id": "iVtN0F77ATw6",
         "outputId": "be7c7fd9-0967-4011-a337-c57aa08ede44"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -951,7 +924,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# printing the confusion matrix\n",
         "LABELS = ['Normal', 'Fraud']\n",
         "conf_matrix = confusion_matrix(yTest, yPred)\n",
         "plt.figure(figsize =(12, 12))\n",
@@ -969,7 +941,7 @@
         "id": "PT3apQTfAVoe",
         "outputId": "12143eae-a616-4749-e9f2-69dd5a52b951"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
